# kerby

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bullseye.yaml  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  bays.rs  destinations.rs  directions.rs  error.rs  geocode.rs  legal.rs  lib.rs  live.rs  locks.rs  lots.rs  main.rs  sessions.rs  share.rs  state.rs  users.rs
crates/api/tests/: integration.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: com.rs  etl.rs  etl_lots.rs  main.rs  poller.rs  pusher.rs  sweeper.rs
deploy/: README.md  fly.api.toml  fly.worker.toml
docs/: index.html
marketing/: kerby.md
migrations/: 20260701000001_init.sql  20260701000002_simplify_bays.sql  20260701000003_push_notifications.sql  20260701000004_saved_destinations_and_lots.sql
mobile/: .env.example  .gitignore  App.tsx  app.config.js  app.json  eas.json  package-lock.json  package.json  tsconfig.json
mobile/src/: api.ts  geo.ts  polyline.ts  push.ts  storage.ts  voice.ts
mobile/src/screens/: LoginScreen.tsx  MapScreen.tsx  NavigationScreen.tsx  VoiceSettingsModal.tsx  WalkBackScreen.tsx
