[package]
name = "kerby-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kerby-worker"
path = "src/main.rs"

[dependencies]
kerby-domain = { path = "../domain" }
tokio.workspace = true
sqlx.workspace = true
reqwest.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
dotenvy.workspace = true
